fix fontawesome icons alignment

--- a/app/frontend/stylesheets/global.css
+++ b/app/frontend/stylesheets/global.css
@@ -12,7 +12,7 @@ body {
 }
 
 .fa {
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 
 .header.main {
